[gd_scene load_steps=4 format=3 uid="uid://d0b3440wcnsd1"]

[ext_resource type="Script" uid="uid://bjk4urn8m03vx" path="res://Scripts/MainMenu.gd" id="1_8y4xj"]
[ext_resource type="Script" uid="uid://djsvt04xt1b45" path="res://Scripts/ui.gd" id="2_f7yhl"]
[ext_resource type="PackedScene" uid="uid://c1c1v0m2t3oh5" path="res://Scenes/transition_diamond.tscn" id="2_x4cfq"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8y4xj")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -93.5
offset_top = -57.0
offset_right = 93.5
offset_bottom = 57.0
grow_horizontal = 2
grow_vertical = 2

[node name="ContinueButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Kontynuuj"
language = "pl"

[node name="NewGameButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Nowa Gra"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Wyjd≈∫"

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("2_f7yhl")

[node name="TransitionDiamond" parent="UI" instance=ExtResource("2_x4cfq")]
visible = false

[connection signal="pressed" from="VBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="VBoxContainer/NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
